kubernetes/bionames/bionames.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bionames
  labels:
    service: bionames
    app: bionames
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: bionames
    image: renciorg/green-bionames
    ports:
    resources:
      requests:
        memory: 200Mi
      limits:
        memory: 1Gi
  restartPolicy: OnFailure
