kubernetes/bionames/bionames-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bionames
  namespace: translator
spec:
  type: LoadBalancer
  loadBalancerIP: nnn.nn.nn.nnn
  selector:
    app: bionames
  ports:
  - name: http
    port: 5001
    protocol: TCP
    targetPort: 5001
